--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/chatapp?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/rockon?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Calebhurst1!
 spring.jpa.show-sql=true
