--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,11 @@
 			<version>2.2.5.RELEASE</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>5.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
