--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rockon?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Calebhurst1!
+spring.datasource.url=postgresql://postgres:2RHnhiEtNcORHHfT1iOE@containers-us-west-177.railway.app:6135/railway
+spring.datasource.username=postgres
+spring.datasource.password=2RHnhiEtNcORHHfT1iOE
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder
