--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://containers-us-west-55.railway.app:7419/rockon?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://containers-us-west-55.railway.app:7419/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=oqq4VHjhVgZ53DFdNkwn
 spring.jpa.show-sql=true
