--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=oqq4VHjhVgZ53DFdNkwn
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.enabled=true
