--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://containers-us-west-55.railway.app:7419/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/rockon?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=oqq4VHjhVgZ53DFdNkwn
+spring.datasource.password=Calebhurst1!
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.hibernate=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.enabled=true
