--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,8 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-			</dependency>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
