--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://containers-us-west-55.railway.app:7419/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url=mysql://root:fehE54-dBHdhfc-CA13Bc1H3dH35d1h5@monorail.proxy.rlwy.net:37257/railway
 spring.datasource.username=root
-spring.datasource.password=oqq4VHjhVgZ53DFdNkwn
+spring.datasource.password=fehE54-dBHdhfc-CA13Bc1H3dH35d1h5
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
