--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=mysql://root:fehE54-dBHdhfc-CA13Bc1H3dH35d1h5@monorail.proxy.rlwy.net:37257/railway
+spring.datasource.url=jdbc:mysql://root:fehE54-dBHdhfc-CA13Bc1H3dH35d1h5@monorail.proxy.rlwy.net:37257/railway
 spring.datasource.username=root
 spring.datasource.password=fehE54-dBHdhfc-CA13Bc1H3dH35d1h5
 spring.jpa.show-sql=true
